Changed java version & added swap chain requirement to device